<?xml version="1.0"?>
<package>
  <name>ros_gui_teleop</name>
  <version>0.0.1</version>
  <description>Manual Robot Control</description>
  <license>BSD</license>
  <maintainer email="enesyazz26@gmail.com">Enes Yaz</maintainer>
  <author email="enesyazz26@gmail.com">Enes Yaz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
